--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -9,7 +9,7 @@
     <p>
       The <a href="http://www.railstutorial.org/"><em><%= t "Ruby on Rails
       Tutorial" %></em></a> is a
-      <a href="http://www.railstutorial.org/book"><%= t "book" %></a> and
+      <a href="http://www.railstutorial.org/book"><%= t "book" %></a> <%= t "and" %>
       <a href="http://screencasts.railstutorial.org/"><%= t "screencast series" %></a>
       <%= t "to teach web development with" %>
       <a href="http://rubyonrails.org/"><%= t "Ruby on Rails" %></a>.
