--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, t("Contact") %>
-<h1>Contact</h1>
+<h1><%= t "Contact" %></h1>
 <p>
   <%= t "Contact the Ruby on Rails" %>
   <a href="http://www.railstutorial.org/contact"><%= t "contact page" %></a>.
