--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,13 @@
 <div class="center jumbotron">
-  <h1><%= t "Welcome to the Sample App" %></h1>
+  <h1><%= t ".Welcome" %></h1>
 
   <h2>
-    <%= t "This is the home page for the" %>
-    <a href="http://www.railstutorial.org/"><%= t "Ruby on Rails Tutorial" %></a>
-    <%= t "sample application" %>
+    <%= t ".This_is" %>
+    <a href="http://www.railstutorial.org/"><%= t ".Tutorial" %></a>
+    <%= t ".sample" %>
   </h2>
 
-  <%= link_to t("Sign up now"), signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to t(".Sign_up_now"), signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
   <%= link_to image_tag("rails.png", alt: t("Rails logo")),
