--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,13 @@
 <footer class="footer">
   <small>
-    <%= t "The" %> <a href="http://www.railstutorial.org/"><%= t "Ruby on Rails Tutorial" %></a>
-    <%= t "by" %> <a href="http://www.michaelhartl.com/"><%= t "Michael Hartl" %></a>
+    <%= t ".The" %> <a href="http://www.railstutorial.org/"><%= t ".Tutorial" %></a>
+    <%= t ".by" %> <a href="http://www.michaelhartl.com/"><%= t ".Michael_Hartl" %></a>
   </small>
   <nav>
     <ul>
-      <li><%= link_to t("About"),  about_path %></li>
-      <li><%= link_to t("Contact"), contact_path %></li>
-      <li><a href="http://news.railstutorial.org/"><%= t "News" %></a></li>
+      <li><%= link_to t(".About"),  about_path %></li>
+      <li><%= link_to t(".Contact"), contact_path %></li>
+      <li><a href="http://news.railstutorial.org/"><%= t ".News" %></a></li>
     </ul>
   </nav>
 </footer>
