--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to t("sample_app"), root_path, id: "logo" %>
+    <%= link_to t(".sample_app"), root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t("Home"), root_path %></li>
-        <li><%= link_to t("Help"), help_path %></li>
-        <li><%= link_to t("Log in"), "#" %></li>
+        <li><%= link_to t(".Home"), root_path %></li>
+        <li><%= link_to t(".Help"), help_path %></li>
+        <li><%= link_to t(".Log_in"), "#" %></li>
       </ul>
     </nav>
   </div>
