--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,6 @@
-<% provide :title, t("Contact") %>
-<h1><%= t "Contact" %></h1>
+<% provide :title, t(".Contact") %>
+<h1><%= t ".Contact" %></h1>
 <p>
-  <%= t "Contact the Ruby on Rails" %>
-  <a href="http://www.railstutorial.org/contact"><%= t "contact page" %></a>.
+  <%= t ".Contact_the_Ruby" %>
+  <a href="http://www.railstutorial.org/contact"><%= t "contact_page" %></a>.
 </p>
