--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,24 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t(".Home"), root_path %></li>
         <li><%= link_to t(".Help"), help_path %></li>
-        <li><%= link_to t(".Log_in"), "#" %></li>
+        <% if logged_in? %>
+          <li><%= link_to t(".Users"), "#" %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t ".Account" %> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t(".Profile"), current_user %></li>
+              <li><%= link_to t(".Settings"), "#" %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t(".Log_out"), logout_path, method: "delete" %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t(".Log_in"), login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
