Implement basic login

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
     <%= t ".The" %> <a href="http://www.railstutorial.org/"><%= t ".Tutorial" %></a>
-    <%= t ".by" %> <a href="http://www.michaelhartl.com/"><%= t ".Michael_Hartl" %></a>
+    <%= t ".by" %> <a href="http://www.michaelhartl.com/">Michael Hartl</a>
   </small>
   <nav>
     <ul>
