--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,14 +6,14 @@
         <li><%= link_to t(".Home"), root_path %></li>
         <li><%= link_to t(".Help"), help_path %></li>
         <% if logged_in? %>
-          <li><%= link_to t(".Users"), "#" %></li>
+          <li><%= link_to t(".Users"), users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t ".Account" %> <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to t(".Profile"), current_user %></li>
-              <li><%= link_to t(".Settings"), "#" %></li>
+              <li><%= link_to t(".Settings"), edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to t(".Log_out"), logout_path, method: "delete" %>
