--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,10 +1,10 @@
-<% if @user.errors.any? %>
+<% if object.errors.any? %>
   <div id=".error_explanation">
     <div class="alert alert-danger">
-      <%= t ".The_form" %> <%= pluralize(@user.errors.count, t(".error")) %>.
+      <%= t ".The_form" %> <%= pluralize(object.errors.count, t(".error")) %>.
     </div>
     <ul>
-    <% @user.errors.full_messages.each do |msg| %>
+    <% object.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
     <% end %>
     </ul>
